kustomize/facebooc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: facebooc
  name: facebooc
spec:
  ports:
  - name: "16000"
    port: 16000
    protocol: TCP
    targetPort: 16000
  selector:
    app: facebooc
